<resources>
    <string name="app_name">AndroidHW</string>
    <string name="title_form">Анкета для співбесіди</string>
    <string name="section_personal_data">Особисті дані</string>
    <string name="label_full_name">ПІБ</string>
    <string name="hint_full_name">Введіть ПІБ</string>
    <string name="label_age">Вік</string>
    <string name="hint_age">Введіть вік</string>
    <string name="label_salary">Бажана зарплатня (USD)</string>
    <string name="salary_value_placeholder">Бажана зарплатня: 0 USD</string>
    <string name="salary_requirement">Допустима зарплатня: %1$d-%2$d USD</string>
    <string name="section_skills">Додаткові дані</string>
    <string name="skill_experience">Досвід роботи від 2 років</string>
    <string name="skill_teamwork">Навички командної розробки</string>
    <string name="skill_testing">Навички тестування додатків</string>
    <string name="skill_trips">Готовність до відряджень</string>
    <string name="section_questions">Тестові питання</string>
    <string name="question_1">Який компонент відповідає за UI в Android?</string>
    <string name="answer_1_a">Activity</string>
    <string name="answer_1_b">Service</string>
    <string name="answer_1_c">BroadcastReceiver</string>
    <string name="question_2">В якому каталозі зберігаються XML-розмітки?</string>
    <string name="answer_2_a">res/layout</string>
    <string name="answer_2_b">res/drawable</string>
    <string name="answer_2_c">res/values</string>
    <string name="question_3">Який метод життєвого циклу викликається першим?</string>
    <string name="answer_3_a">onStart()</string>
    <string name="answer_3_b">onCreate()</string>
    <string name="answer_3_c">onResume()</string>
    <string name="question_4">Чим найчастіше виконують асинхронні задачі?</string>
    <string name="answer_4_a">Coroutine або Thread</string>
    <string name="answer_4_b">Intent</string>
    <string name="answer_4_c">View</string>
    <string name="question_5">Що таке Intent?</string>
    <string name="answer_5_a">Базовий клас для UI</string>
    <string name="answer_5_b">Об\'єкт для взаємодії між компонентами</string>
    <string name="answer_5_c">Менеджер ресурсів</string>
    <string name="button_submit">Здати тест</string>
    <string name="result_placeholder">Результат</string>
    <string name="result_passed_format">Вітаємо! Ви набрали %1$d балів.</string>
    <string name="result_failed_score_format">Недостатньо балів: %1$d. Мінімум: %2$d.</string>
    <string name="result_failed_requirements">Кандидат не відповідає вимогам: %1$s.</string>
    <string name="requirement_age">вік від %1$d до %2$d</string>
    <string name="requirement_salary">зарплатня від %1$d до %2$d USD</string>
    <string name="error_full_name">Вкажіть ПІБ (мінімум два слова)</string>
    <string name="error_age_range">Вік має бути від %1$d до %2$d</string>
    <string name="contacts_title">Контакти компанії</string>
    <string name="contacts_value">email: hr@example.com\nтел.: +1-555-0100</string>
    <string name="salary_value_format">Бажана зарплатня: %1$d USD</string>
</resources>
